# polars-check

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
manual_testing/: check.toml  explore.py
src/check/: config.rs  error.rs  io.rs  lib.rs  results.rs
src/check/checks/: core.rs  mod.rs
